// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Checkbox - renders 1`] = `
<div
  className="checkbox"
>
  

  <input
    aria-describedby={null}
    defaultChecked={null}
    disabled={null}
    id={null}
    type="checkbox"
  />
  

  <label
    className="d-block"
  />
  

</div>
`;

exports[`Component: Checkbox - renders checkbox group 1`] = `
<form>
  <fieldset
    className="checkbox-group"
  >
    <legend />
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={null}
        id="radio-example-1"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-1"
      >
        Checkbox label
      </label>
      

    </div>
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={null}
        id="radio-example-2"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-2"
      >
        Checkbox label
      </label>
      

    </div>
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={null}
        id="radio-example-3"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-3"
      >
        Checkbox label
      </label>
      

    </div>
  </fieldset>
</form>
`;

exports[`Component: Checkbox - renders checkbox group with disabled state 1`] = `
<form>
  <fieldset
    className="checkbox-group"
    disabled={true}
  >
    <legend />
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={true}
        id="radio-example-1"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-1"
      >
        Checkbox label
      </label>
      

    </div>
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={true}
        id="radio-example-2"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-2"
      >
        Checkbox label
      </label>
      

    </div>
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={true}
        id="radio-example-3"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-3"
      >
        Checkbox label
      </label>
      

    </div>
  </fieldset>
</form>
`;

exports[`Component: Checkbox - renders checkbox group with error 1`] = `
<form>
  <fieldset
    className="checkbox-group has-error"
  >
    <legend />
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={null}
        id="radio-example-1"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-1"
      >
        Checkbox label
      </label>
      

    </div>
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={null}
        id="radio-example-2"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-2"
      >
        Checkbox label
      </label>
      

    </div>
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={null}
        id="radio-example-3"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-3"
      >
        Checkbox label
      </label>
      

    </div>
    <div
      className="help-block"
    >
      <i
        aria-hidden="true"
        className="swepay-icon-error-triangle-filled small"
      />
      error
    </div>
    

  </fieldset>
</form>
`;

exports[`Component: Checkbox - renders checkbox group with groupTitle 1`] = `
<form>
  <fieldset
    className="checkbox-group"
  >
    <legend>
      Group title
    </legend>
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={null}
        id="radio-example-1"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-1"
      >
        Checkbox label
      </label>
      

    </div>
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={null}
        id="radio-example-2"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-2"
      >
        Checkbox label
      </label>
      

    </div>
    <div
      className="checkbox"
    >
      

      <input
        aria-describedby={null}
        defaultChecked={null}
        disabled={null}
        id="radio-example-3"
        type="checkbox"
      />
      

      <label
        htmlFor="radio-example-3"
      >
        Checkbox label
      </label>
      

    </div>
  </fieldset>
</form>
`;

exports[`Component: Checkbox - renders with the checked attribute 1`] = `
<div
  className="checkbox"
>
  

  <input
    aria-describedby={null}
    defaultChecked={true}
    disabled={null}
    id={null}
    type="checkbox"
  />
  

  <label
    className="d-block"
  />
  

</div>
`;

exports[`Component: Checkbox - renders with the disabled attribute 1`] = `
<div
  className="checkbox"
>
  

  <input
    aria-describedby={null}
    defaultChecked={null}
    disabled={true}
    id={null}
    type="checkbox"
  />
  

  <label
    className="d-block"
  />
  

</div>
`;

exports[`Component: Checkbox - renders with the specified id 1`] = `
<div
  className="checkbox"
>
  

  <input
    aria-describedby={null}
    defaultChecked={null}
    disabled={null}
    id="test"
    type="checkbox"
  />
  

  <label
    className="d-block"
    htmlFor="test"
  />
  

</div>
`;

exports[`Component: Checkbox - renders with the specified id and label 1`] = `
<div
  className="checkbox"
>
  

  <input
    aria-describedby={null}
    defaultChecked={null}
    disabled={null}
    id="test"
    type="checkbox"
  />
  

  <label
    className="d-block"
    htmlFor="test"
  >
    test
  </label>
  

</div>
`;
